# color-corners

./: Cargo.toml  attribs.txt
.cargo/: config.toml
Assets/: FreeLook Camera Noise Profile.asset
Assets/Audio/: Main.mixer
Assets/Material/: BrickPBRGraph.shadergraph  FloorMat.mat  TransWallMat.mat  WallMat.mat
Assets/Material/kenney-prototype-textures/PNG/Dark/: TransWallShader.shadergraph
Assets/Material/kenney-prototype-textures/PNG/Light/: LightMat.mat
Assets/Mesh/: Forklift.glb  Forklift.prefab  Pickup Crate.glb  Storage Unit.glb  Storage Unit.prefab  StorageUnitGlossy.mat  StorageUnitMatte.mat  Wall.prefab  Zone.prefab  ZoneParticleShader.shadergraph  ZoneParticles.vfx
Assets/Resources/: UnityGLTFSettings.asset
Assets/Scenes/: Main.unity  MainMenu.unity
Assets/Scripts/: Add.cs  Ball.cs  Core.cs  DebugExtra.cs  GameController.cs  InGameUiController.cs  MainMenuController.cs  PlayerController.cs  Zone.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/UI Toolkit/: InGameUi.uxml  MainMenuUi.uxml
Assets/_Recovery/: 0.unity
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
UIElementsSchema/: UnityEditor.Experimental.GraphView.xsd  UnityEditor.VFX.UI.xsd
crates/core/: Cargo.toml
crates/core/src/: lib.rs  player.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: build.rs  cleanup.rs  main.rs  targets.rs  version.rs
