[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30.8", features = [
  "fast-math",
  "core-simd",
  "glam-assert",
] }
bytemuck = { version = "1.24.0", features = [
  "aarch64_simd",
  "derive",
  "extern_crate_alloc",
  "extern_crate_std",
  "wasm_simd",
  "align_offset",
] }
